--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,8 @@
 <head>
   <title>tug team linear algebra</title>
   <link rel="stylesheet" type="text/css" href="/html/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css"
+    integrity="sha384-vKruj+a13U8yHIkAyGgK1J3ArTLzrFGBbBc0tDp4ad/EyewESeXE/Iv67Aj8gKZ0" crossorigin="anonymous">
 </head>
 
 <body>
@@ -6151,7 +6153,10 @@
 
           <g transform="translate(104, 6) scale(1, 1) rotate(0 0 0)">
             <g id="problem-area">
-              <text id="problem-text" dy="1em" fill="#000000" font-family="Arial" font-size="10">hello</text>
+              <foreignObject dy="1em" width="366" height="94">
+                <div id="problem-html" xmlns="http://www.w3.org/1999/xhtml">
+                </div>
+              </foreignObject>
             </g>
           </g>
         </g>
