player name display fix

--- a/html/index.html
+++ b/html/index.html
@@ -6114,7 +6114,7 @@
               transform="translate(32, 86) scale(1, 1) rotate(0 0 0)"></text>
           </g>
           <g transform="translate(461.40003084, 190) scale(1, 1) rotate(0 0 0)">
-            <use xlink:href="#TractorMultiplicationPlayerIconBlue" fill="#FFDD00"></use>
+            <use xlink:href="#TractorMultiplicationPlayerIconBlue" fill="#0066FF"></use>
             <text class="tractor-name-blue" dy="1em" fill="#FFFFFF" font-family="Arial" font-size="10"
               style="white-space: pre;" text-anchor="middle"
               transform="translate(-32, 86) scale(1, 1) rotate(0 0 0)"></text>
@@ -6147,9 +6147,9 @@
 
           <use xlink:href="#TractorMultiplicationPlayerIconRed"
             transform="translate(24.127913146915013, 12.73308232254039) scale(0.7631970288134792, 0.7631970288134791) rotate(0 0 0)"
-            fill="#0066FF"></use><text dy="1em" fill="#333333" font-family="Arial" font-size="10"
-            style="white-space: pre;" text-anchor="middle"
-            transform="translate(50, 93.73308232254038) scale(1, 1) rotate(0 0 0)">Player433</text>
+            fill="#0066FF"></use>
+          <text id="player-name" dy="1em" fill="#333333" font-family="Arial" font-size="10" style="white-space: pre;"
+            text-anchor="middle" transform="translate(50, 93.73308232254038) scale(1, 1) rotate(0 0 0)"></text>
 
           <g transform="translate(104, 6) scale(1, 1) rotate(0 0 0)">
             <g id="problem-area">
