cooldown + minor fixes

--- a/html/index.html
+++ b/html/index.html
@@ -6090,25 +6090,25 @@
             transform="translate(351.40003084, 230) scale(0.30405405405405406, 1) rotate(0 0 0)"></use>
 
           <g transform="translate(31.40003084, 190) scale(1, 1) rotate(0 0 0)">
-            <use xlink:href="#TractorMultiplicationPlayerIconRed" fill="#0066FF"></use>
+            <use xlink:href="#TractorMultiplicationPlayerIconRed" fill="#FF2200"></use>
             <text class="tractor-name-red" dy="1em" fill="#FFFFFF" font-family="Arial" font-size="10"
               style="white-space: pre;" text-anchor="middle"
               transform="translate(32, 86) scale(1, 1) rotate(0 0 0)"></text>
           </g>
           <g transform="translate(101.40003084, 190) scale(1, 1) rotate(0 0 0)">
-            <use xlink:href="#TractorMultiplicationPlayerIconRed" fill="#0066FF"></use>
+            <use xlink:href="#TractorMultiplicationPlayerIconRed" fill="#FF2200"></use>
             <text class="tractor-name-red" dy="1em" fill="#FFFFFF" font-family="Arial" font-size="10"
               style="white-space: pre;" text-anchor="middle"
               transform="translate(32, 86) scale(1, 1) rotate(0 0 0)"></text>
           </g>
           <g transform="translate(171.40003084, 190) scale(1, 1) rotate(0 0 0)">
-            <use xlink:href="#TractorMultiplicationPlayerIconRed" fill="#0066FF"></use>
+            <use xlink:href="#TractorMultiplicationPlayerIconRed" fill="#FF2200"></use>
             <text class="tractor-name-red" dy="1em" fill="#FFFFFF" font-family="Arial" font-size="10"
               style="white-space: pre;" text-anchor="middle"
               transform="translate(32, 86) scale(1, 1) rotate(0 0 0)"></text>
           </g>
           <g transform="translate(241.40003084, 190) scale(1, 1) rotate(0 0 0)">
-            <use xlink:href="#TractorMultiplicationPlayerIconRed" fill="#0066FF"></use>
+            <use xlink:href="#TractorMultiplicationPlayerIconRed" fill="#FF2200"></use>
             <text class="tractor-name-red" dy="1em" fill="#FFFFFF" font-family="Arial" font-size="10"
               style="white-space: pre;" text-anchor="middle"
               transform="translate(32, 86) scale(1, 1) rotate(0 0 0)"></text>
@@ -6165,6 +6165,8 @@
 
 
   </svg>
+
+  <div>PRESS NUMBER KEYS 1-4 TO SELECT ANSWER</div>
 
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
   <script type="module" src="/js/client.js"></script>
